--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <h1 class="header-name">Pixel Art Maker</h1>
 
     <h2>Choose Grid Size</h2>
+
     <form id="sizePicker">
         Grid Height:
-        <input type="number" id="inputHeight" name="height" min="1" value="50">
+        <input type="number" id="inputHeight" name="height" min="1" value="10">
         Grid Width:
-        <input type="number" id="inputWidth" name="width" min="1" value="50">
-        <input type="submit">
+        <input type="number" id="inputWidth" name="width" min="1" value="10">
+        <input type="submit" id="submit-button">
     </form>
 
     <h2>Pick A Color</h2>
