--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Pixel Art Maker!</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
     <link rel="stylesheet" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
+
 <body>
     <h1 class="header-name">Pixel Art Maker</h1>
 
@@ -13,9 +15,8 @@
 
     <form id="sizePicker">
         Grid Height:
-        <input type="number" id="inputHeight" name="height" min="1" value="10">
-        Grid Width:
-        <input type="number" id="inputWidth" name="width" min="1" value="10">
+        <input type="number" id="inputHeight" name="height" min="1" max="100" value="30"> Grid Width:
+        <input type="number" id="inputWidth" name="width" min="1" max="100" value="50">
         <input type="submit" id="submit-button">
     </form>
 
@@ -30,4 +31,5 @@
 
     <script src="designs.js"></script>
 </body>
+
 </html>
