--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
     <form id="sizePicker">
         Grid Height:
-        <input type="number" id="inputHeight" name="height" min="1" max="100" value="10"> Grid Width:
-        <input type="number" id="inputWidth" name="width" min="1" max="100" value="30">
+        <input type="number" id="inputHeight" name="height" min="1" max="100" value="1"> 
+        Grid Width:
+        <input type="number" id="inputWidth" name="width" min="1" max="100" value="1">
         <input type="submit" id="submit-button">
     </form>
 
