--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
 <body>
     <h1 class="header-name">Pixel Art Maker</h1>
 
-    <h2>Choose Grid Size</h2>
+    <div class="toolSelect">
+        <h2>Choose Grid Size</h2>
 
-    <form id="sizePicker">
-        Grid Height:
-        <input type="number" id="inputHeight" name="height" min="1" max="100" value="1"> 
-        Grid Width:
-        <input type="number" id="inputWidth" name="width" min="1" max="100" value="1">
-        <input type="submit" id="submit-button">
-    </form>
+        <form id="sizePicker">
+            Grid Height:
+            <input type="number" id="inputHeight" name="height" min="1" max="100" value="1"> Grid Width:
+            <input type="number" id="inputWidth" name="width" min="1" max="100" value="1">
+            <input type="submit" id="submit-button">
+        </form>
 
-    <h2>Pick A Color</h2>
-    <input type="color" id="colorPicker">
+        <h2>Pick A Color</h2>
+        <input type="color" id="colorPicker">
 
+    </div>
     <h2>Design Canvas</h2>
     <table id="pixelCanvas">
 
